[tool.poetry]
name = "zeal-docset-tools"
version = "0.1.0"
description = ""
authors = ["David Morrison <drmorr@appliedcomputing.io>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = ["PLR2004", "PLR0913", "PLR0917"]
select = ["E", "F", "I", "W", "PL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
force-single-line = true
